# Ritaline

./: LICENSE  README.md  pyproject.toml
examples/: endpoint.yaml  job.yaml  sample.txt
ritaline/: .gitignore
src/ritaline/: __init__.py  __main__.py  chunking.py  cli.py  config.py  dataset.py  documents.py  exceptions.py  generation.py  llm.py  models.py  pipeline.py  prompts.py  templates.py  training.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_documents.py  test_generation.py  test_llm.py
