[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ritaline"
version = "0.1.0"
description = "Generate grounded Q&A datasets from PDF/TXT documents and fine-tune open-weight LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ritaline contributors" }
]
keywords = ["llm", "fine-tuning", "qa", "pdf", "dataset", "lora", "qlora"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "PyMuPDF>=1.24,<2",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2,<3",
  "datasets>=3,<5",
  "peft>=0.15,<1",
  "torch>=2.3",
  "transformers>=4.57,<6",
  "trl>=1.0,<2",
]
qlora = [
  "ritaline[train]",
  "bitsandbytes>=0.45,<1",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.8,<1",
  "twine>=5,<7",
]

[project.scripts]
ritaline = "ritaline.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/ritaline"
Repository = "https://github.com/your-org/ritaline"
Issues = "https://github.com/your-org/ritaline/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
